--- a/config/nmea_socket_driver.yaml
+++ b/config/nmea_socket_driver.yaml
@@ -1,7 +1,7 @@
 nmea_navsat_driver:
   ros__parameters:
-    port: "/dev/ttyACM0"
-    baud: 57600
+    ip: "traethlinreach.local"
+    port: "9002"
     frame_id: "gps"
     time_ref_source: "gps"
     useRMC: False
